<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/resultLayout">

        <EditText
            android:id="@+id/primaryResult"
            style="@style/resultItem"
            android:autofillHints="false"
            android:text="@string/expression"
            android:textSize="@dimen/primaryResult"
            android:background="@null"
            android:inputType="none"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/secondaryResult"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/secondaryResult"
            style="@style/resultItem"
            android:text="@string/result"
            android:textSize="@dimen/secondaryResult"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        style="@style/baseRow">

        <Button
            android:id="@+id/hexButton"
            style="@style/baseButton"
            android:text="@string/hexadecimal"
            android:background="@drawable/base_green"
            android:onClick="changeBase"
            android:tag="hex"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/hexResult"
            style="@style/baseResult"
            android:text="@string/result"
            tools:ignore="RtlCompat" />
    </LinearLayout>

    <LinearLayout
        style="@style/baseRow">

        <Button
            android:id="@+id/decButton"
            style="@style/baseButton"
            android:text="@string/decimal"
            android:onClick="changeBase"
            android:tag="dec"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/decResult"
            style="@style/baseResult"
            android:text="@string/result"
            tools:ignore="RtlCompat" />
    </LinearLayout>

    <LinearLayout
        style="@style/baseRow">

        <Button
            android:id="@+id/octButton"
            style="@style/baseButton"
            android:text="@string/octal"
            android:onClick="changeBase"
            android:tag="oct"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/octResult"
            style="@style/baseResult"
            android:text="@string/result"
            tools:ignore="RtlCompat" />
    </LinearLayout>

    <LinearLayout
        style="@style/baseRow">

        <Button
            android:id="@+id/binButton"
            style="@style/baseButton"
            android:text="@string/binary"
            android:onClick="changeBase"
            android:tag="bin"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/binResult"
            style="@style/baseResult"
            android:text="@string/result"
            tools:ignore="RtlCompat" />
    </LinearLayout>


    <LinearLayout
        style="@style/buttonRow">

        <Button
            android:id="@+id/reset"
            style="@style/controlButton"
            android:text="@string/reset"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

        <Button
            android:id="@+id/openParentheses"
            style="@style/controlButton"
            android:text="@string/open_parentheses"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/closeParentheses"
            style="@style/controlButton"
            android:text="@string/close_parentheses"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/shiftLeft"
            style="@style/controlButton"
            android:text="@string/shift_left"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        style="@style/buttonRow">

        <Button
            android:id="@+id/d"
            style="@style/valueButton"
            android:text="@string/d" />

        <Button
            android:id="@+id/e"
            style="@style/valueButton"
            android:text="@string/e" />

        <Button
            android:id="@+id/f"
            style="@style/valueButton"
            android:text="@string/f" />

        <Button
            android:id="@+id/shiftRight"
            style="@style/controlButton"
            android:text="@string/shift_right"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        style="@style/buttonRow">

        <Button
            android:id="@+id/a"
            style="@style/valueButton"
            android:text="@string/a" />

        <Button
            android:id="@+id/b"
            style="@style/valueButton"
            android:text="@string/b" />

        <Button
            android:id="@+id/c"
            style="@style/valueButton"
            android:text="@string/c" />

        <Button
            android:id="@+id/divide"
            style="@style/operationButton"
            android:text="@string/divide"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        style="@style/buttonRow">

        <Button
            android:id="@+id/seven"
            style="@style/valueButton"
            android:text="@string/seven" />

        <Button
            android:id="@+id/eight"
            style="@style/valueButton"
            android:text="@string/eight" />

        <Button
            android:id="@+id/nine"
            style="@style/valueButton"
            android:text="@string/nine" />

        <Button
            android:id="@+id/times"
            style="@style/operationButton"
            android:text="@string/times"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        style="@style/buttonRow">

        <Button
            android:id="@+id/four"
            style="@style/valueButton"
            android:text="@string/four" />

        <Button
            android:id="@+id/five"
            style="@style/valueButton"
            android:text="@string/five" />

        <Button
            android:id="@+id/six"
            style="@style/valueButton"
            android:text="@string/six" />

        <Button
            android:id="@+id/minus"
            style="@style/operationButton"
            android:text="@string/minus"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        style="@style/buttonRow">

        <Button
            android:id="@+id/one"
            style="@style/valueButton"
            android:text="@string/one" />

        <Button
            android:id="@+id/two"
            style="@style/valueButton"
            android:text="@string/two" />

        <Button
            android:id="@+id/three"
            style="@style/valueButton"
            android:text="@string/three" />

        <Button
            android:id="@+id/plus"
            style="@style/operationButton"
            android:text="@string/plus"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        style="@style/buttonRow">

        <Button
            android:id="@+id/zero"
            style="@style/valueButton"
            android:layout_weight="2.075"
            android:text="@string/zero"
            tools:ignore="InefficientWeight" />

        <ImageButton
            android:id="@+id/button6"
            style="@style/valueButton"
            android:contentDescription="@string/delete"
            app:srcCompat="@drawable/backspace" />

        <Button
            android:id="@+id/equal"
            style="@style/operationButton"
            android:text="@string/equal"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

</LinearLayout>